--- a/themes/demo/layouts/openlab.htm
+++ b/themes/demo/layouts/openlab.htm
@@ -14,5 +14,8 @@
             {% partial 'site/header' %}
         </header>
         {% page %}
+        <footer>
+            {% partial 'site/footer' %}
+        </footer>
     </body>
 </html>
