--- a/themes/demo/partials/site/footer.htm
+++ b/themes/demo/partials/site/footer.htm
@@ -1,6 +1,5 @@
 <div id="footer">
     <div class="container">
-        <hr />
-        <p class="muted credit">&copy; 2013 - {{ "now"|date("Y") }} Alexey Bobkov &amp; Samuel Georges.</p>
+        <p class="muted credit">todo openlab footer</p>
     </div>
 </div>
